--- a/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
+++ b/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
@@ -8,7 +8,7 @@
     <string name="cta_settings">"Consenti l'utilizzo della rete dati"</string>
     <string name="title_optimizer">Pulizia</string>
     <string name="header_optimizer">Utilizzando questa funzione accetti i <a href="http://www.cmcm.com/about/privacy_zh.html?p=cm">Termini del Servizio</a> di Clean Master.</string>
-    <string name="text_optimizer">Utilizza il motore di Pulizia onlinee</string>
+    <string name="text_optimizer">Utilizza il motore di Pulizia online</string>
     <string name="summary_optimizer">Carica e confronta i nomi delle cartelle sconosciute con il database online</string>
     <string name="button_optimizer">OK</string>
     <string name="title_antivirus">Scansione Virus</string>
@@ -345,7 +345,7 @@
     <string name="summary_install_virus">Verifica le app per la presenza di virus prima di installarle</string>
     <string name="title_miui_update_no">Trovato aggiornamento MIUI: %s</string>
     <string name="title_miui_update_yes">MIUI è aggiornata!</string>
-    <string name="title_app_update_no">%d app hanno deggli aggiornamenti disponibili</string>
+    <string name="title_app_update_no">%d app hanno degli aggiornamenti disponibili</string>
     <string name="title_app_update_yes">Tutte le app sono aggiornate!</string>
     <string name="title_data_flow_no">Monitor utilizzo dati disattivato</string>
     <string name="title_data_flow_yes">Monitor utilizzo dati attivato</string>
@@ -398,7 +398,7 @@
     <string name="hints_virus_apk_list_item_summary">Virus (apk)</string>
     <string name="hints_risk_app_list_item_summary">Rischio (app)</string>
     <string name="hints_risk_apk_list_item_summary">Rischio (apk)</string>
-    <string name="virus_list_header_title">%d viruse rilevati</string>
+    <string name="virus_list_header_title">%d virus rilevati</string>
     <string name="risk_list_header_title">%d app sospette rilevate</string>
     <string name="hints_virus_name_title">Virus:</string>
     <string name="hints_virus_descx_title">Descrizione:</string>
@@ -410,6 +410,7 @@
     <string name="hints_risk_name_title">Rischio:</string>
     <string name="hints_risk_descx_title">Descrizione:</string>
     <string name="hints_storage_free">Libero</string>
+    <string name="hints_storage_free_size">%s liberi</string>
     <string name="activity_title_cache">Cache</string>
     <string name="activity_title_ad">Pubblicità</string>
     <string name="activity_title_apk">Pacchetti</string>
@@ -545,15 +546,12 @@
     <string name="dialog_title_load_cleanup_engine_error">"E' andato storto qualcosa"</string>
     <string name="dialog_msg_load_cleanup_engine_error">Il motore di pulizia è stato corrotto.</string>
     <string name="hints_auto_start_warning_info">"Non si riceverà nessun avviso per le app a cui è stato negato l'avvio automatico"</string>
-    <string name="hints_auto_start_enable_title">%d app possono avviarsi in automatico</string>
-    <string name="hints_auto_start_disable_title">"%d app non possono avviarsi in automatico"</string>
     <string name="activity_title_apps_manager">App</string>
     <string name="activity_title_permissions_manager">Permessi</string>
     <string name="dialog_title_auto_start_declare">"Info sull'avvio automatico"</string>
     <string name="dialog_msg_auto_start_declare">Alcune app di sicurezza potrebbero indicare erroneamente che MIUI sta impedendo alle app di avviarsi. Per verificare i permessi che sono stati concessi alle singole app, vai in Impostazioni -> Applicazioni</string>
     <string name="button_text_known">OK</string>
     <string name="empty_title_perm_apps">Vuoto</string>
-    <string name="hints_apps_perm_count">%d permessi</string>
     <string name="permission_group_title_charges_related">Costi</string>
     <string name="permission_group_title_privacy_related">Privacy</string>
     <string name="permission_group_title_media_related">Multimedia</string>
@@ -563,9 +561,6 @@
     <string name="permission_action_prompt">Chiedi sempre</string>
     <string name="permission_action_reject">Nega</string>
     <string name="empty_title_permission_apps_list">Vuoto</string>
-    <string name="hints_permission_apps_count">%d app</string>
-    <string name="hints_get_root_enable_title">%d app con accesso root</string>
-    <string name="hints_get_root_disable_title">%d app senza accesso root</string>
     <string name="empty_title_root_apps">Nessuna app con accesso root</string>
     <string name="hints_remember_choice">Ricorda la mia scelta</string>
     <string name="root_apply_title">Avviso importante</string>
@@ -613,6 +608,61 @@
     <string name="permission_close_permission_control_dialog_msg">Quando la Gestione dei Permessi è disattivata, le applicazioni non chiederanno il permesso per leggere i tuoi contatti, accedere al registro chiamate, modificare le impostazioni di sistema o accedere alla fotocamera ed altre risorse.</string>
     <string name="permission_permission_control_closed_desc_dialog_title">Gestione Permessi disattivato</string>
     <string name="permission_permission_control_closed_desc_dialog_msg">Le applicazioni non chiederanno il permesso di leggere i tuoi contatti, accedere al registro chiamate, modificare le impostazioni di sistema o accedere alla fotocamera ed altre risorse.Puoi disattivare questa funzione nelle impostazioni dei Permessi.</string>
+    <string name="examination_score_100_with_recommend">%d voci possono essere ottimizzate</string>
+    <string name="examination_score_80_100_with_recommend">%d voci possono essere ottimizzate</string>
+    <string name="scanning_bar_system_title">Scansione sistema…</string>
+    <string name="scanning_bar_memory_title">Scansione cache…</string>
+    <string name="scanning_bar_cache_title">Scansione cestino…</string>
+    <string name="scanning_bar_number">%d%%</string>
+    <string name="scanning_bar_system_text">Permessi app</string>
+    <string name="hints_scanning_text">Scansione…</string>
+    <string name="auto_handle_title">GENERAL</string>
+    <string name="manual_handle_title">AVAILABLE FEATURES</string>
+    <string name="manual_item_white_list_title">Eccezioni</string>
+    <string name="manual_item_white_list_summary">Prevent selected apps from being optimized</string>
+    <string name="delete_from_manual_item_white_list">Remove from exceptions</string>
+    <string name="manual_white_list_header">%d exceptions</string>
+    <string name="button_text_ignore">Ignore</string>
+    <string name="button_text_ignore_alert_title">Ignore this alert?</string>
+    <string name="back">Back</string>
+    <string name="empty_title_manual_item_white_list">No exceptions.</string>
+    <string name="title_cloud_account">Mi Account</string>
+    <string name="summary_cloud_account">Get the most out of your Mi device</string>
+    <string name="title_cloud_service">Mi Cloud</string>
+    <string name="summary_cloud_service">Sync your photos, contacts, and more across all your devices</string>
+    <string name="title_power_optimizer">Battery saver</string>
+    <string name="summary_power_optimizer">"Reduce your device's performance when battery is low"</string>
+    <string name="title_data_flow">Set a data usage warning</string>
+    <string name="summary_data_flow">"Avoid going over your carrier plan's monthly data limit"</string>
+    <string name="title_telecom_operator">"Use carrier's accounting"</string>
+    <string name="summary_telecom_operator">Get your monthly data usage stats from your carrier</string>
+    <string name="title_flow_verify">Compare accounting</string>
+    <string name="summary_flow_verify">"Haven't synced carrier's data usage stats in %d days"</string>
+    <string name="title_saving_switch">Data saver</string>
+    <string name="summary_saving_switch">Restrict apps from using your mobile data connection to transfer data</string>
+    <string name="title_flow_notification">Data usage report</string>
+    <string name="summary_flow_notification">Show your monthly data usage stats in the notification shade</string>
+    <string name="title_flow_purchase">Time to top up</string>
+    <string name="summary_flow_purchase_left">You only have %sMB of mobile data remaining this month</string>
+    <string name="summary_flow_purchase_beyond">"You've exceeded your carrier plan's monthly data limit by %sMB"</string>
+    <string name="title_show_notification">Notification shade controls</string>
+    <string name="summary_show_notification">"Pin Security Center's controls to the notification shade"</string>
+    <string name="title_garbage_lib">Automatic updates</string>
+    <string name="summary_garbage_lib">Use the latest definitions to remove spyware, adware, and other unwanted garbage</string>
+    <string name="title_permission_root">Root access warning</string>
+    <string name="summary_permission_root">Your device and personal data are more vulnerable to attack from apps that have root access</string>
+    <string name="title_app_update">Updates available</string>
+    <string name="title_miui_update">Update available</string>
+    <string name="summary_miui_update">Update available for %s.</string>
     <string name="pref_title_open_optimizer_cloud_scan">Usa il motore di Pulizia online</string>
     <string name="pref_summary_open_optimizer_cloud_scan">Carica e confronta nomi di file sconosciuti con il database online</string>
+    <string name="title_virus_cloudscan">Use online virus definitions</string>
+    <string name="summary_virus_cloudscan">Upload app names and details and scan using online virus definitions</string>
+    <string name="title_cleaner_cloudscan">Use online Cleaner engine</string>
+    <string name="summary_cleaner_cloudscan">Upload and compare unknown folder names with online definitions</string>
+    <string name="toast_flow_notification">Turned on data usage notifications</string>
+    <string name="toast_show_notification">Pinned to notification shade</string>
+    <string name="toast_virus_cloudscan">Virus scan will use online definitions</string>
+    <string name="toast_cleaner_cloudscan">Cleaner will use online definitions</string>
+    <string name="toast_garbage_lib">Turned on automatic updates for Cleaner</string>
 </resources>
