--- a/Italian/main/DownloadProviderUi.apk/res/values-it/strings.xml
+++ b/Italian/main/DownloadProviderUi.apk/res/values-it/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="dialog_confirm_delete_downloads_message">Eliminare %d processi?</string>
+    <string name="dialog_confirm_delete_the_download_item_message">Eliminare questi</string>
+    <string name="dialog_confirm_delete_checkbox_message">Elimina anche i file locali</string>
     <string name="download_when_network_connected">Scarica utilizzando la rete dati mobile</string>
     <string name="download_paused">Download in pausa</string>
     <string name="download_pending">Download in attesa</string>
