--- a/Italian/device/mocha/framework-res.apk/res/values-it/strings.xml
+++ b/Italian/device/mocha/framework-res.apk/res/values-it/strings.xml
@@ -13,7 +13,7 @@
     <string name="ok">OK</string>
     <string name="paste">Incolla</string>
     <string name="search_go">Cerca</string>
-    <string name="selectAll">Seleziona tutto</string>
+    <string name="selectAll">Sel.tutto</string>
     <string name="unknownName">(Sconosciuto)</string>
     <string name="untitled">&lt;Senza nome></string>
     <string name="VideoView_error_button">OK</string>
