--- a/Italian/main/FileExplorer.apk/res/values-it/strings.xml
+++ b/Italian/main/FileExplorer.apk/res/values-it/strings.xml
@@ -32,7 +32,7 @@
     <string name="operation_show_sys">Mostra file di sistema e cache</string>
     <string name="operation_hide_sys">Nascondi file di sistema e cache</string>
     <string name="cancel">Annulla</string>
-    <string name="tab_expand">Espandi</string>
+    <string name="tab_expand">Espansione</string>
     <string name="background">Scarica in background</string>
     <string name="no_file">Nessun file</string>
     <string name="tab_category">Cerca</string>
@@ -260,7 +260,7 @@ Hai ricevuto %1$s di spazio gratuito"</string>
     <string name="petabyteShort">PB</string>
     <string name="fileSizeSuffix">%1$s%2$s</string>
     <string name="tab_local">Locale</string>
-    <string name="sys_size_enable">\u0020permetti</string>
+    <string name="sys_size_enable">\u0020liberi</string>
     <string name="menu_list_name">Menu</string>
     <string name="tools">Strumenti</string>
     <string name="category_type_meida">Media</string>
