--- a/Italian/main/Music.apk/res/values-it/strings.xml
+++ b/Italian/main/Music.apk/res/values-it/strings.xml
@@ -129,7 +129,7 @@
     <string name="download_auto_settings_summary">Queste impostazioni si applicano solo ai brani segnati come preferiti</string>
     <string name="download_auto_network_settings">Impostazioni download</string>
     <string name="download_auto_when_free_network">Scarica i brani solo quando connesso via Wi-Fi</string>
-    <string name="download_auto_when_all_network">Scarica i brani sia tramite rete movile che via Wi-Fi</string>
+    <string name="download_auto_when_all_network">Scarica i brani sia tramite rete mobile che via Wi-Fi</string>
     <string name="download_auto_default_quality">Qualità audio</string>
     <string name="download_auto_quality_alert_title">Qualità audio per il download</string>
     <string name="download_auto_quality_alert_sub_title_for_expired">"Il tuo periodo di prova o il tuo abbonamento sono scaduti. Prego selezionare un'altra qualità audio."</string>
